--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,3 +1,5 @@
 {
-    "postCreateCommand": "bash clone-repos.sh"
+  "name": "Multi‑Repo Bootstrap",
+  "image": "mcr.microsoft.com/devcontainers/universal:2",
+  "postCreateCommand": "bash clone-repos.sh"
 }
